--- a/index.html
+++ b/index.html
@@ -1,43 +1,1 @@
-<html manifest="meta">
-<head>
-	<title>Wryte</title>
-	<meta charset="utf-8">
-	<style>
-		@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
-		textarea {
-			font-size: 1.7em;
-			font-family:'Noto Sans' 'sans-serif';
-			width: 100%;
-			height: 100%;
-			border: none;
-			outline: none;
-			padding:5% 20%;}
-
-	h1 {
-		font-family: 'Noto Sans';
-		margin: 0px;
-		border: 8px solid;
-		padding: 3px;
-		width: 80px;
-		text-align: center;
-		font-weight: bold;
-		font-size: 14pt;
-		margin-left: 20%;
-		opacity: .2;
-	}
-	</style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>
-	$(document).ready(function() {
-	var old_value = localStorage.getItem('value');
-	$('textarea').val(old_value);
-	$('textarea').on('keyup', function(event) {
-	var value = $(this).val();
-	localStorage.setItem("value", value);
-	});
-	});
-</script>
-</head>
-<h1>Wryte</h1>
-<textarea autofocus placeholder="Just write.
-"/>
+Wryte
