--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Neuton|Noto+Sans" rel="stylesheet">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-
+		<link rel="icon"  type="image/png"  href="favicon.ico">
 	</head>
 	<body>
 		<div class="logo">
