--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Wryte</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+  		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Neuton|Noto+Sans" rel="stylesheet">
