--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 		<link rel="icon"  type="image/png"  href="favicon.ico">
+		<link rel="apple-touch-icon" href="appIcon.png" />
 	</head>
 	<body>
 		<div class="logo">
