--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
   		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  		<meta name="mobile-web-app-capable" content="yes">
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Neuton|Noto+Sans" rel="stylesheet">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 		<link rel="icon"  type="image/png"  href="favicon.ico">
-		<link rel="apple-touch-icon" href="appIcon.png" />
+		<link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
 	</head>
 	<body>
 		<div class="logo">
