Makes the application offline mode

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Neuton|Noto+Sans" rel="stylesheet">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="juqery-3.2.0.min.js"></script>
 
 		<link rel="icon"  type="image/png"  href="favicon.ico">
 		<link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
+		<html manifest="offline.manifest">
 	</head>
 	<body>
 		<div class="logo">
