--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Neuton|Noto+Sans" rel="stylesheet">
-		<script src="juqery-3.2.0.min.js"></script>
+		<script src="jquery-3.2.0.min.js"></script>
 
 		<link rel="icon"  type="image/png"  href="favicon.ico">
 		<link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
